--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "node src/deploy-commands.js",
+    "start": "node src/recipe-bot.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "KeyLime17",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
